updated info text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-		
+
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -44,7 +44,7 @@
                 to be closer to achieve a specific career. Here, we present a proof-of-concept with <b>Computer Science</b>
                 as the target discipline.
             </p>
-			<p> Each recommended course comes from information gathered from alumni profiles on social networks
+			<p> Each recommended course is a result of information gathered from alumni profiles on social networks
                 with business purposes.
             </p>
             <p> You can navigate through different areas of expertise in Computer Science through the drop-down and
@@ -52,7 +52,7 @@
                 in some expertise areas, we also recommend online courses that can be suitable for that particular area.
             </p>
         </div>
-		
+
         <div class="results">
             <div class="container">
 
