added ranking to courses

--- a/index.html
+++ b/index.html
@@ -109,18 +109,18 @@
                     </div>
 
                     <div class="col-md-9 user">
-                        <h3>Recommended courses:</h3>
+                        <h3>Ranking of recommended courses:</h3>
                         <table class="table" id="user_based">
-                            <tr><td> Certificate - Nova Scotia Community College<td><tr>
-                            <tr><td> Bachelor of Technology - Jawaharlal Nehru Technological University<td><tr>
-                            <tr><td> Master of Science in Software Engineering - San Jose State University<td><tr>
-                            <tr><td> Bachelor of Science in Computer Science - University of California<td><tr>
-                            <tr><td> Master of Science in Computer Science - Maharishi University of Management<td><tr>
-                            <tr><td> Bachelor of Science in Computer Science - University of the Philippines<td><tr>
-                            <tr><td> Bachelor of Science in Computer Science - University of Michigan<td><tr>
-                            <tr><td> Web Development Immersive - General Assembly<td><tr>
-                            <tr><td> Bachelor of Science in Computer Science - University of Bucharest<td><tr>
-                            <tr><td> Bachelor in Computer Science - Central University<td><tr>
+                            <tr><td> <b>1.</b></td><td> Certificate - Nova Scotia Community College<td><tr>
+                            <tr><td> <b>2.</b></td><td>  Bachelor of Technology - Jawaharlal Nehru Technological University<td><tr>
+                            <tr><td> <b>3.</b></td><td>  Master of Science in Software Engineering - San Jose State University<td><tr>
+                            <tr><td> <b>4.</b></td><td> Bachelor of Science in Computer Science - University of California<td><tr>
+                            <tr><td> <b>5.</b></td><td> Master of Science in Computer Science - Maharishi University of Management<td><tr>
+                            <tr><td> <b>6.</b></td><td> Bachelor of Science in Computer Science - University of the Philippines<td><tr>
+                            <tr><td> <b>7.</b></td><td> Bachelor of Science in Computer Science - University of Michigan<td><tr>
+                            <tr><td> <b>8.</b></td><td> Web Development Immersive - General Assembly<td><tr>
+                            <tr><td> <b>9.</b></td><td> Bachelor of Science in Computer Science - University of Bucharest<td><tr>
+                            <tr><td> <b>10.</b></td><td> Bachelor in Computer Science - Central University<td><tr>
                         </table>
                     </div>
                 </div>
